--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -117,7 +117,8 @@ header {
     background-color: #ffffff;
 
     .container > .row {
-      height: 84px;
+      min-height: 84px;
+      justify-content: center;
     }
 
     .menu {
@@ -161,120 +162,214 @@ header {
       }
     }
 
-    .search-form {
-      border: 1px solid $form-border-color;
-      display: inline-flex;
-      height: 45px;
-      color: $text-color;
+    .search-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-      .category {
-        border-right: 1px solid $form-border-color;
-        display: flex;
-        align-items: center;
-        position: relative;
-        padding: 0 30px 0 35px;
+      .category-list-show {
+        display: none;
+      }
 
-        i:first-child {
-          color: $primary;
-          position: absolute;
-          left: 10px;
-          z-index: 0;
-        }
-
-        i:last-child {
-          position: absolute;
-          right: 10px;
-          z-index: 0;
-        }
-
-        .select-cta {
-          p {
-            font-size: 14px;
+      .search-form {
+        border: 1px solid $form-border-color;
+        display: inline-flex;
+        height: 45px;
+        color: $text-color;
+  
+        .category {
+          border-right: 1px solid $form-border-color;
+          display: flex;
+          align-items: center;
+          position: relative;
+          padding: 0 30px 0 35px;
+  
+          i:first-child {
+            color: $primary;
+            position: absolute;
+            left: 10px;
+            z-index: 0;
+          }
+  
+          i:last-child {
+            position: absolute;
+            right: 10px;
+            z-index: 0;
+          }
+  
+          .select-cta {
+            p {
+              font-size: 14px;
+              margin: 0;
+      
+            }
+          }
+          
+          ul {
             margin: 0;
+            padding: 0;
+            border: 1px solid #292929;
+            background: #ffffff;
+            width: calc(100% + 2px);
+            position: absolute;
+            list-style: none;
+            transition: 300ms;
+            transition-delay: 300ms;
+          }
+  
+          .category-first {
+            z-index: 99;
+            left: -1px;
+            top: 43px;
+            transform: scaleY(0);
+            transform-origin: top;
+            border-top: none;
+  
+            
+            li {
+              font-size: 14px;
+              line-height: 43px;
+              padding: 0 10px;
+              height: 43px;
+              text-align: center;
+              text-overflow: ellipsis;
+              position: relative;
+  
+              &:hover {
+                background: $primary;
+                color: white;
+                transition: 300ms;
+              }
+  
+              .category-second {
+                top: -1px;
+                transform: scaleX(0);
+                transform-origin: 0%;
+                left: 188px;
+                color: $text-color;
+              }
+  
+              &:hover .category-second {
+                transform: scaleX(1);
+              }
+            }
+          }
+  
+          &:hover {
+            cursor: pointer;
+          }
+  
+          &:hover .category-first {
+            cursor: pointer;
+            transform: scaleY(1);
+            transition: 300ms;
           }
         }
-        
-        ul {
-          margin: 0;
-          padding: 0;
-          border: 1px solid #292929;
-          background: #ffffff;
-          width: calc(100% + 2px);
-          position: absolute;
-          list-style: none;
-          transition: 300ms;
-          transition-delay: 300ms;
-        }
-
-        .category-first {
-          z-index: 99;
-          left: -1px;
-          top: 43px;
-          transform: scaleY(0);
-          transform-origin: top;
-          border-top: none;
-
-          
-          li {
+  
+        .search-field {
+          display: flex;
+          align-items: center;
+          position: relative;
+  
+          input {
+            border: 0;
+            padding-left: 10px;
             font-size: 14px;
-            line-height: 43px;
-            padding: 0 10px;
-            height: 43px;
-            text-align: center;
-            text-overflow: ellipsis;
-            position: relative;
-
-            &:hover {
-              background: $primary;
-              color: white;
-              transition: 300ms;
-            }
-
-            .category-second {
-              top: -1px;
-              transform: scaleX(0);
-              transform-origin: 0%;
-              left: 188px;
+            outline: none;
+  
+            &::placeholder {
               color: $text-color;
             }
+          }
+  
+          button {
+            border: 0;
+            background-color: transparent;
+            outline: none;
+          }
+        }
+      }
+    }
+  }
+}
 
-            &:hover .category-second {
-              transform: scaleX(1);
+@media(max-width: 992px) {
+
+  header {
+  
+    .menu-bar {
+  
+      .menu {
+        width: 100%;
+        padding: 0;
+  
+        ul {
+          width: 100%;
+  
+          li {
+            flex: 1;
+            height: 45px;
+  
+            a {
+              width: 100%;
+              justify-content: center;
             }
           }
         }
+      }
+  
+      .search-wrapper {
+        padding: 20px 0;
+      }
+    }
+  }
+}
 
-        &:hover {
-          cursor: pointer;
+@media(max-width: 573px) {
+
+  header {
+  
+    .menu-bar {
+  
+      .menu {
+        transform: scaleY(0);
+        opacity: 0;
+        transition: 300ms;
+        position: relative;
+        z-index: 97;
+  
+        ul {
+          flex-direction: column;
+          position: absolute;
+          z-index: 98;
+          background: white;
+  
+          li {
+            border-bottom: 1px solid rgba(0, 0, 0, .2);
+          }
         }
 
-        &:hover .category-first {
-          cursor: pointer;
+        &.drop {
           transform: scaleY(1);
+          opacity: 1;
           transition: 300ms;
+          transform-origin: top;
         }
       }
 
-      .search-field {
-        display: flex;
-        align-items: center;
-        position: relative;
+      .search-wrapper {
+        justify-content: space-evenly;
+        
+        .category-list-show {
+          display: flex;
+          padding: 0 10px;
+          justify-content: center;
+          color: $primary;
+          font-size: 30px;
 
-        input {
-          border: 0;
-          padding-left: 10px;
-          font-size: 14px;
-          outline: none;
-
-          &::placeholder {
-            color: $text-color;
+          &.active {
+            color: #333333;
           }
-        }
-
-        button {
-          border: 0;
-          background-color: transparent;
-          outline: none;
         }
       }
     }
