--- a/src/partials/30_section-features.html
+++ b/src/partials/30_section-features.html
@@ -2,40 +2,48 @@
   <div class="container">
     <div class="row features-row">
       <div class="col-lg-3 col-sm-6 col-md-6 col-6 feature-box">
-        <a href="#">
-          <div class="icon"><i class="fas fa-truck"></i></div>
-          <div class="content">
-            <h5>Free shipping</h5>
-            <p>All orders</p>
-          </div>
-        </a>
+        <div class="mr-1 wrapper">
+          <a href="#">
+            <div class="icon"><i class="fas fa-truck"></i></div>
+            <div class="content">
+              <h5>Free shipping</h5>
+              <p>All orders</p>
+            </div>
+          </a>
+        </div>
       </div>
       <div class="col-lg-3 col-sm-6 col-md-6 col-6 feature-box">
-        <a href="#">
-          <div class="icon"><i class="fas fa-headphones"></i></div>
-          <div class="content">
-            <h5>24/7 customer</h5>
-            <p>support</p>
-          </div>
-        </a>
+        <div class="mr-1 wrapper">
+          <a href="#">
+            <div class="icon"><i class="fas fa-headphones"></i></div>
+            <div class="content">
+              <h5>24/7 customer</h5>
+              <p>support</p>
+            </div>
+          </a>
+        </div>
       </div>
       <div class="col-lg-3 col-sm-6 col-md-6 col-6 feature-box">
-        <a href="#">
-          <div class="icon"><i class="fas fa-reply-all"></i></div>
-          <div class="content">
-            <h5>Money back</h5>
-            <p>guarantee</p>
-          </div>
-        </a>
+        <div class="mr-1 wrapper">
+          <a href="#">
+            <div class="icon"><i class="fas fa-reply-all"></i></div>
+            <div class="content">
+              <h5>Money back</h5>
+              <p>guarantee</p>
+            </div>
+          </a>
+        </div>
       </div>
       <div class="col-lg-3 col-sm-6 col-md-6 col-6 feature-box">
-        <a href="#">
-          <div class="icon"><i class="fas fa-bullhorn"></i></div>
-          <div class="content">
-            <h5>Member discount</h5>
-            <p>First order</p>
-          </div>
-        </a>
+        <div class="mr-1 wrapper">
+          <a href="#">
+            <div class="icon"><i class="fas fa-bullhorn"></i></div>
+            <div class="content">
+              <h5>Member discount</h5>
+              <p>First order</p>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
