--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -1,9 +1,10 @@
 .feature-box {
-  border: 1px solid #b6b6b6;
-  text-align: center;
   margin-top: 40px;
-  float: left;
-  max-width: 245px;
+
+  .wrapper {
+    border: 1px solid #b6b6b6;
+    text-align: center;
+  }
 
   a {
     text-decoration: none;
