--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -12,7 +12,7 @@ header {
         line-height: 55px;
 
         a {
-          color: #ffffff;
+          color: $bright-text;
           font-size: 13px;
 
           &:hover {
@@ -69,7 +69,7 @@ header {
       .cart-box {
         display: inline-block;
         position: relative;
-        color: #ffffff;
+        color: $bright-text;
 
         .cart-icon {
           background-color: $primary;
@@ -113,7 +113,7 @@ header {
 
   .menu-bar {
     box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
-    background-color: #ffffff;
+    background-color: $bright-text;
 
     .container > .row {
       height: 84px;
@@ -145,14 +145,14 @@ header {
           text-decoration: none;
           display: flex;
           align-items: center;
-          border-top: 4px solid #ffffff;
+          border-top: 4px solid $bright-text;
           font-weight: 500;
           letter-spacing: 1px;
 
           &:hover,
           &.active {
             background-color: $primary;
-            color: #ffffff;
+            color: $bright-text;
             border-color: $primary;
           }
 
@@ -253,7 +253,7 @@ header {
   ul {
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: $bright-text;
     li {
       list-style: none;
       a {
@@ -264,14 +264,14 @@ header {
         text-decoration: none;
         display: block;
         align-items: center;
-        border-top: 4px solid #ffffff;
+        border-top: 4px solid $bright-text;
         font-weight: 500;
         letter-spacing: 1px;
 
         &:hover,
         &.active {
           background-color: $primary;
-          color: #ffffff;
+          color: $bright-text;
           border-color: $primary;
         }
         &.active {
