--- a/src/sass/components/_section-promotional.scss
+++ b/src/sass/components/_section-promotional.scss
@@ -21,29 +21,12 @@
     }
 
     .promotional-dots {
+      @extend .dots;
       margin-right: 0.5rem;
       ul {
         margin-bottom: 25px;
         padding: 0 0 0 1rem;
-        list-style: none;
-        transform: translateY(15px);
-        li {
-          display: inline-block;
-          margin-left: 0.5rem;
-
-          a {
-            display: block;
-            width: 13px;
-            height: 13px;
-            border-radius: 6px;
-            background-color: #e1e1e1;
-
-            &.active,
-            &:hover {
-              background-color: $primary;
-            }
-          }
-        }
+        background-color: $form-border-color;
       }
     }
   }
