--- a/src/partials/20_section-promotional.html
+++ b/src/partials/20_section-promotional.html
@@ -6,20 +6,24 @@
           <div class="panel">
             <div class="col-auto heading"><h5>Hot deals</h5></div>
             <div class="promotional-dots">
-              <ul>
-                <li><a href="#" class="active"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+              <ul class="hot-deals-carousel-nav">
+                <li><span></span></li>
+                <li><span></span></li>
+                <li><span></span></li>
               </ul>
             </div>
           </div>
           <div class="promotional-box">
             <div class="photo-container p-0">
-              <div class="carousel__container tns">
-                <div class="slide">
-                  <div class="slide__item">
-                    <img src="../src/images//furniture1.jpeg" alt="furniture1" />
-                  </div>
+              <div class="row carousel-hot-deals">
+                <div class="slide-item">
+                  <img src="../src/images//furniture1.jpeg" alt="furniture1" />
+                </div>
+                <div class="slide-item">
+                  <img src="../src/images//furniture2.jpeg" alt="furniture2" />
+                </div>
+                <div class="slide-item">
+                  <img src="../src/images//furniture.jpeg" alt="furniture3" />
                 </div>
               </div>
               <div class="promotional-button">
