--- a/src/sass/components/_section-promotional.scss
+++ b/src/sass/components/_section-promotional.scss
@@ -31,7 +31,7 @@
           display: inline-block;
           margin-left: 0.5rem;
 
-          a {
+          span {
             display: block;
             width: 13px;
             height: 13px;
@@ -45,6 +45,14 @@
           }
         }
       }
+    }
+    .tns-nav-active {
+      span {
+        background-color: $primary;
+      }
+    }
+    .carousel-hot-deals {
+      flex-wrap: nowrap;
     }
   }
   .promotional-box {
