--- a/src/partials/40_section-sale.html
+++ b/src/partials/40_section-sale.html
@@ -2,11 +2,13 @@
   <div class="container">
     <div class="row sale-row">
       <div class="col-6 first-column">
-        <div class="sale-box">
-          <div class="text-sale-box">
-            <h1>guest room</h1>
-            <h2>sofa</h2>
-            <p>-20%</p>
+        <div class="grey-sale-box">
+          <div class="sale-box">
+            <div class="text-sale-box">
+              <h1>guest room</h1>
+              <h2>sofa</h2>
+              <p>-20%</p>
+            </div>
           </div>
         </div>
       </div>
