--- a/src/sass/components/_section--sale.scss
+++ b/src/sass/components/_section--sale.scss
@@ -7,47 +7,50 @@
     flex-wrap: nowrap;
 
     .first-column {
-      position: relative;
       display: flex;
       background: url("https://images.pexels.com/photos/276583/pexels-photo-276583.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
         no-repeat bottom / cover;
       height: 450px;
       margin: 10px 0 10px 10px;
+      padding: 20px;
 
-      &::before {
-        position: absolute;
-        content: "";
-        background: rgba(0, 0, 0, 0.2);
-        width: 92%;
-        height: 92%;
-        margin-top: 20px;
-      }
-
-      .sale-box {
+      .grey-sale-box {
         display: flex;
-        align-items: flex-end;
+        background-color: rgba(0, 0, 0, 0.3);
+        width: 100%;
+        height: 100%;
+        padding-bottom: 20px;
 
-        .text-sale-box {
+        .sale-box {
           display: flex;
-          flex-direction: column;
-          height: 150px;
-          color: $font-color;
-          filter: brightness(100%);
-          text-transform: uppercase;
-          margin: 50px;
+          align-items: flex-end;
 
-          h2 {
-            font-size: 3rem;
-            font-weight: bolder;
-            line-height: 0.8;
-          }
+          .text-sale-box {
+            display: flex;
+            flex-direction: column;
+            height: 150px;
+            color: $font-color;
+            filter: brightness(100%);
+            text-transform: uppercase;
+            margin: 20px;
 
-          p {
-            border: 2px solid $font-color;
-            font-size: 2.8rem;
-            margin-bottom: 0;
-            text-align: center;
-            width: 120px;
+            h1 {
+              line-height: 0.8;
+            }
+
+            h2 {
+              font-size: 3rem;
+              font-weight: bolder;
+              line-height: 0.8;
+            }
+
+            p {
+              border: 4px solid $font-color;
+              font-size: 2.8rem;
+              margin-bottom: 0;
+              text-align: center;
+              width: 150px;
+            }
           }
         }
       }
@@ -82,12 +85,13 @@
             h2 {
               font-size: 1.5rem;
               line-height: 0.5;
+              letter-spacing: 2px;
             }
 
             p {
               color: $primary;
               font-size: 2rem;
-              font-weight: bolder;
+              font-weight: 600;
             }
           }
         }
@@ -103,6 +107,8 @@
           display: flex;
           justify-content: flex-end;
           align-items: center;
+          text-align: right;
+          margin-right: 10px;
           height: 100%;
 
           .text-special-box {
