--- a/src/partials/20_section-featured.html
+++ b/src/partials/20_section-featured.html
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div class="col-8 right-side">
+      <div class="col-lg-8 col-md-12 right-side">
         <div
           class="carousel"
           data-flickity="{ &quot;cellAlign&quot;: &quot;left&quot;, &quot;contain&quot;: true }"
