--- a/src/sass/components/_featured.scss
+++ b/src/sass/components/_featured.scss
@@ -36,6 +36,10 @@
   }
 
   .left-side {
+    @include media-breakpoint-down(md) {
+      display: none;
+    }
+
     .hot-deals-images {
       padding: 10px;
       height: 280px;
@@ -120,7 +124,12 @@
   .right-side {
     .featured-images {
       max-width: 700px;
-      height: 440px;
+      max-height: 440px;
+
+      @include media-breakpoint-down(md) {
+        width: 100%;
+        height: auto;
+      }
     }
 
     .overlay {
