--- a/src/sass/components/_promote.scss
+++ b/src/sass/components/_promote.scss
@@ -12,7 +12,7 @@
     position: relative;
 
     &--text {
-      color: $white;
+      color: $text-hover;
       text-transform: uppercase;
       font-size: 20px;
       padding: 13px;
@@ -27,7 +27,7 @@
     line-height: 1;
 
     &--dot {
-      background-color: $white;
+      background-color: $text-hover;
       display: inline-block;
       width: 13px;
       height: 13px;
@@ -81,7 +81,7 @@
     border: 0;
     float: right;
     background-color: $text-color;
-    color: $white;
+    color: $text-hover;
     font-size: 26px;
 
     @media not all and (hover: none) {
@@ -98,7 +98,7 @@
   top: 35%;
   width: 100%;
   height: 30%;
-  color: $white;
+  color: $text-hover;
   text-align: center;
 
   &__header {
@@ -119,7 +119,7 @@
     left: 35%;
     height: 40px;
     border: 0;
-    background-color: $white;
+    background-color: $text-hover;
     color: $text-color;
     font-weight: 700;
   }
@@ -134,7 +134,7 @@
 
   &__value {
     text-align: center;
-    color: $white;
+    color: $text-hover;
     display: inline-block;
     width: 70px;
     height: 70px;
