--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,14 +1,20 @@
+//Colors
+$white: #fff;
+$black: #000;
 $header-topbar-bg: #864343;
 $header-bg: #723636;
-
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
-
 $primary: #d58e32;
 $text-hover: #fff;
-
 $text-color: #2a2a2a;
-
 $product-box-bg: #fff;
-
 $form-border-color: #292929;
+$featured-phoneNumber: rgb(216, 216, 216);
+$featured-cardCounter: rgb(224, 227, 237);
+$featured-menuBar: rgba(1, 2, 2, 0.2);
+$featured-box: #b6b6b6;
+$featured-booxContent: rgb(42, 42, 42);
+$featured-cartCouter: translate(50%, -50%);
+//Grid
+$grid-base: 10px;
