--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -1,41 +1,39 @@
 .feature-box {
-  border: 1px solid #b6b6b6;
+  border: 1px solid $featured-box;
   text-align: center;
-  margin-top: 40px;
+  margin-top: $grid-base * 4;
 
   .icon {
     transform: translateY(-50%);
 
     i {
-      width: 60px;
-      height: 60px;
+      width: $grid-base * 6;
+      height: $grid-base * 6;
       border-radius: 100%;
       position: relative;
       color: $text-color;
       display: inline-flex;
       justify-content: center;
       align-items: center;
-      border: 1px solid #b6b6b6;
+      border: 1px solid $featured-box;
     }
 
     &::before {
       content: "";
-      border: 1px solid #b6b6b6;
+      border: 1px solid $featured-box;
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 76px;
-      height: 76px;
+      @include centererPos();
+      width: $grid-base * 7.6;
+      height: $grid-base * 7.6;
       border-radius: 100%;
-      background-color: #ffffff;
+      background-color: $white;
       z-index: -1;
     }
   }
 
   .content {
     text-transform: uppercase;
-    color: rgb(42, 42, 42);
+    color: $featured-booxContent;
     margin-top: -0.5rem;
     letter-spacing: 1px;
 
@@ -52,7 +50,21 @@
   &.active {
     i {
       background-color: $primary;
-      color: #ffffff;
+      color: $white;
+      border-color: $primary;
+    }
+
+    .content {
+      color: $primary;
+    }
+  }
+}
+
+.link {
+  &:hover {
+    i {
+      background-color: $primary;
+      color: $white;
       border-color: $primary;
     }
 
