--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -9,11 +9,11 @@ header {
 
       li {
         display: inline-block;
-        line-height: 55px;
+        line-height: $grid-base * 5.5;
 
         a {
-          color: #ffffff;
-          font-size: 13px;
+          color: $white;
+          font-size: $grid-base * 1.3;
 
           &:hover {
             color: $primary;
@@ -44,19 +44,19 @@ header {
     background-color: $header-bg;
 
     .container > .row {
-      height: 145px;
+      height: $grid-base * 14.5;
     }
 
     .phone-number {
       p {
         margin: 0;
-        font-size: 17px;
-        line-height: 42px;
-        color: rgb(216, 216, 216);
+        font-size: $grid-base * 1.7;
+        line-height: $grid-base * 4.2;
+        color: $featured-phoneNumber;
         font-weight: 500;
 
         i {
-          font-size: 32px;
+          font-size: $grid-base * 3.2;
           color: $primary;
           vertical-align: middle;
           margin-top: -3px;
@@ -69,21 +69,21 @@ header {
       .cart-box {
         display: inline-block;
         position: relative;
-        color: #ffffff;
+        color: $white;
 
         @media screen and (max-width: 600px) {
-          left: -22px;
+          left: -$grid-base * 2.2;
         }
 
         .cart-icon {
           background-color: $primary;
-          width: 55px;
-          height: 50px;
+          width: $grid-base * 5.5;
+          height: $grid-base * 5;
           border-radius: 3px;
           display: flex;
           align-items: center;
           justify-content: center;
-          font-size: 20px;
+          font-size: $grid-base * 2;
 
           i {
             margin-right: 5px;
@@ -91,24 +91,24 @@ header {
         }
 
         .cart-counter {
-          width: 28px;
-          height: 27px;
-          border-radius: 14px;
+          width: $grid-base * 2.8;
+          height: $grid-base * 2.7;
+          border-radius: $grid-base * 1.4;
           background-color: $header-bg;
           display: flex;
           align-items: center;
           justify-content: center;
-          font-size: 14px;
-          color: rgb(224, 227, 237);
+          font-size: $grid-base * 1.4;
+          color: $featured-cardCounter;
           position: absolute;
           top: 50%;
           right: 0;
-          transform: translate(50%, -50%);
+          transform: $featured-cartCouter;
 
           &__value {
             text-align: left;
-            margin-left: 10px;
-            width: 28px;
+            margin-left: $grid-base;
+            width: $grid-base * 2.8;
           }
         }
 
@@ -123,10 +123,10 @@ header {
 
   .menu-bar {
     box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
-    background-color: #ffffff;
+    background-color: $white;
 
     .container > .row {
-      height: 84px;
+      height: $grid-base * 8.4;
     }
 
     .menu {
@@ -146,19 +146,19 @@ header {
           a {
             color: $text-color;
             text-transform: uppercase;
-            font-size: 12px;
+            font-size: $grid-base * 1;
             padding: 1rem;
             text-decoration: none;
             display: flex;
             align-items: center;
-            border-top: 4px solid #ffffff;
+            border-top: 4px solid $white;
             font-weight: 500;
             letter-spacing: 1px;
 
             &:hover,
             &.active {
               background-color: $primary;
-              color: #ffffff;
+              color: $white;
               border-color: $primary;
             }
 
@@ -173,7 +173,7 @@ header {
     .search-form {
       border: 1px solid $form-border-color;
       display: inline-flex;
-      height: 45px;
+      height: $grid-base * 4;
       color: $text-color;
 
       .category {
@@ -191,7 +191,7 @@ header {
 
         i:last-child {
           position: absolute;
-          right: 10px;
+          right: $grid-base;
           z-index: 0;
         }
 
@@ -200,8 +200,8 @@ header {
           border: 0;
           background-color: transparent;
           outline: none;
-          padding: 5px 30px 5px 35px;
-          font-size: 14px;
+          padding: 5px $grid-base * 3 5px $grid-base * 3.5;
+          font-size: $grid-base * 1.4;
           position: relative;
           z-index: 1;
         }
@@ -214,8 +214,8 @@ header {
 
         input {
           border: 0;
-          padding-left: 10px;
-          font-size: 14px;
+          padding-left: $grid-base;
+          font-size: $grid-base * 1.4;
           outline: none;
 
           &::placeholder {
