--- a/src/sass/components/_section--features.scss
+++ b/src/sass/components/_section--features.scss
@@ -4,7 +4,7 @@
 
 @media (max-width: 1199px) {
   .feature-box-wrapper {
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     height: 100%;
   }
 }
