--- a/src/partials/80_section-brands.html
+++ b/src/partials/80_section-brands.html
@@ -1,37 +1,22 @@
 <div class="section--brands">
   <div class="container">
-    <div class="carousel" data-flickity="{ &quot;groupCells&quot;: 100% }">
-      <div class="brands-panel">
-        <div class="brands-button prev">
-          <a class="" href="#"><i class="fa fa-chevron-left"></i></a>
-        </div>
-        <div
-          class="brand-photo"
-          style="background-image: url('images/placeholder-1.png');"
-        ></div>
-        <div
-          class="brand-photo"
-          style="background-image: url('images/placeholder-2.jpg');"
-        ></div>
-        <div
-          class="brand-photo"
-          style="background-image: url('images/placeholder-1.png');"
-        ></div>
-        <div
-          class="brand-photo"
-          style="background-image: url('images/placeholder-2.jpg');"
-        ></div>
-        <div
-          class="brand-photo"
-          style="background-image: url('images/placeholder-1.png');"
-        ></div>
-        <div
-          class="brand-photo"
-          style="background-image: url('images/placeholder-2.jpg');"
-        ></div>
-        <div class="brands-button next">
-          <a class="" href="#"><i class="fa fa-chevron-right"></i></a>
-        </div>
+    <div class="brands-panel">
+      <div
+        class="carousel wrap"
+        data-flickity="{&quot;pageDots&quot;: false, &quot;groupCells&quot;: &quot;100%&quot;, &quot;cellAlign&quot;: &quot;left&quot;, &quot;contain&quot;: true, &quot;wrapAround&quot;: true }"
+      >
+        <div class="carousel-cell brand-1"></div>
+        <div class="carousel-cell brand-2"></div>
+        <div class="carousel-cell brand-1"></div>
+        <div class="carousel-cell brand-2"></div>
+        <div class="carousel-cell brand-1"></div>
+        <div class="carousel-cell brand-2"></div>
+        <div class="carousel-cell brand-1"></div>
+        <div class="carousel-cell brand-2"></div>
+        <div class="carousel-cell brand-1"></div>
+        <div class="carousel-cell brand-2"></div>
+        <div class="carousel-cell brand-1"></div>
+        <div class="carousel-cell brand-2"></div>
       </div>
     </div>
   </div>
