--- a/src/sass/components/_section--brands.scss
+++ b/src/sass/components/_section--brands.scss
@@ -1,39 +1,51 @@
 .section--brands {
-  padding: 1rem 0;
+  padding: 5rem 0;
 }
 
-.brand-photo {
-  width: 15%;
-  border: 1px solid #e1e1e1;
-  margin: 20px 10px;
+.carousel-cell {
+  width: 150px;
+  height: 100px;
+  border: 1px solid $brands-border-color;
+  margin: 0 10px;
   background-size: cover;
-  position: center;
+  background-position: center center;
+}
+
+.brand-1 {
+  background-image: url("../images/placeholder-1.jpeg");
+}
+.brand-2 {
+  background-image: url("../images/placeholder-2.png");
 }
 
 .brands-panel {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  border-top: 1px solid #e1e1e1;
-  border-bottom: 1px solid #e1e1e1;
-  i {
-    line-height: 100px;
-    color: #fff;
-    margin-left: 7px;
+  padding: 20px 0;
+  border-top: 1px solid $brands-border-color;
+  border-bottom: 1px solid $brands-border-color;
+}
+
+.wrap {
+  padding: 0 50px;
+}
+
+.flickity-prev-next-button {
+  width: 30px;
+  height: 100px;
+  background: $brands-buttons-color;
+  border-radius: 0;
+  &:hover {
+    background: $primary;
   }
 }
 
-.brands-button {
-  height: 100px;
-  width: 30px;
-  margin: 20px 0;
-  background: black;
+.flickity-button-icon {
+  fill: white;
 }
 
-.prev {
-  margin-right: 10px;
+.flickity-prev-next-button.previous {
+  left: 0;
 }
-
-.next {
-  margin-left: 10px;
+.flickity-prev-next-button.next {
+  right: 0;
 }
